# describarr

./: .env.example  Dockerfile  README.md  compose.example.yaml  pyproject.toml
ad_sync/: __main__.py  aligner.py  audiovault.py  config.py  matcher.py  retry_queue.py  server.py  workflow.py
describarr/: aligner.py  server.py  workflow.py
